--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -1057,8 +1057,8 @@
         <div class="table-view-details table-content" *ngIf="sliderStep === 1 && selectedPage">
           <div class="totalViewsNlikes">
             <div class="d-flex justify-content-between infoBlock">
-            <div class="infoType"><img class="viewsIcon" src="assets/icons/faq/views.svg"><span>{{numberOf.clicks}}</span></div>
-            <div class="infoType"><img src="assets/icons/faq/hand.svg"><span>{{numberOf.appearances}}</span></div>
+            <div class="infoType"><img class="viewsIcon" placement="top" container='body' ngbTooltip="Clicks" src="assets/icons/faq/views.svg"><span>{{numberOf.clicks}}</span></div>
+            <div class="infoType"><img   placement="top" container='body' ngbTooltip="Views" src="assets/icons/faq/hand.svg"><span>{{numberOf.appearances}}</span></div>
             </div>
             </div>
           <div class="view-details-data">
