Pricing Images format changed from svg to Png.

--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -313,7 +313,7 @@
         <li>{{"plan.access_to_your_app_for_15_more_days"| translate}}.</li>
       </ul>      
       <div class="cancel-subscription-data row m-0">
-        <div class="img-block col-8"><img src="assets/icons/pricing/cancel_subscription.svg"></div>
+        <div class="img-block col-8"><img src="assets/icons/pricing/cancel_subscription.png"></div>
         <div class="cancel-subscription-reasons col-4 p-0">
           <div class="group-checkbox">
             <div class="heading-title">{{"plan.reason_you_want_cancel"| translate}}</div>
