--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -87,9 +87,9 @@
           </div>
           <div class="col-4 upgrade-price-card" *ngFor='let plan of filterPlansData'>
             <div class="inner-content" *ngIf="plan.type!='free'">
-              <img src="assets/icons/pricing/standard.svg" class="standard-img" *ngIf="plan.name == 'Standard'"> 
-              <img src="assets/icons/pricing/pro.svg" class="pro-img" *ngIf="plan.name == 'Pro'">
-              <img src="assets/icons/pricing/enterprise.svg" class="enterprise-img" *ngIf="plan.name == 'Enterprise'">
+              <img src="assets/icons/pricing/standard.png" class="standard-img" *ngIf="plan.name == 'Standard'"> 
+              <img src="assets/icons/pricing/pro.png" class="pro-img" *ngIf="plan.name == 'Pro'">
+              <img src="assets/icons/pricing/enterprise.png" class="enterprise-img" *ngIf="plan.name == 'Enterprise'">
                 <div class="title-sec">
                   <div class="title">{{plan.name}}</div>
                   <div class="price" [ngClass]='{"d-none":currentPlan===plan.name||plan.name=="Enterprise"}'>${{plan.planAmount}} <span>/ {{termPlan==='Monthly'?("plan.month"| translate):("plan.year"| translate)}}</span></div>
