Documentation links added in  workbench

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -23,7 +23,7 @@
             <img src="assets/icons/help_gray.svg">
             <span class="tooltip-custom_">
               <div class="title-data">{{'workbench.transform_the_incoming_data_into_optimized_documents_using' | translate}}</div>
-              <div class="learn_more">{{'workbench.learn_more' | translate}}</div>
+              <div class="learn_more" ><a href="https://docs.kore.ai/searchassist/manage-index/workbench/#Index_Pipeline_Stages" target="_blank">{{'workbench.learn_more' | translate}}</a></div>
             </span>
           </span>
         </div>
@@ -187,7 +187,7 @@
                 <span class="tooltip-custom_ width-245">
                   <div class="title-data">{{'workbench.documents_that_satisfy_the_condition_will' | translate}}
                   </div>
-                  <div class="learn_more">{{'workbench.learn_more' | translate}}</div>
+                  <div class="learn_more"><a href="https://docs.kore.ai/searchassist/manage-index/workbench/#Index_Pipeline_Stages" target="_blank">{{'workbench.learn_more' | translate}}</a></div>
                 </span>
               </span>
             </div>
