--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
@@ -59,7 +59,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.searchAssist_allows_you' | translate}} </div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/source')">{{'useronboarding.add_data' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/SearchAssist/source-management/content/" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>  
@@ -77,7 +77,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.searchAssist_allows_you_index' | translate}}</div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/FieldManagementComponent')">{{'useronboarding.start_indexing' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/searchassist/manage-index/index-management/" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.SearchAssist_allows_to_optimize' | translate}}</div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/weights')">{{'useronboarding.configure' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/searchassist/optimize-results/result-optimization/" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.searchAssist_allows_you_to_customize' | translate}} </div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/search-experience')">{{'useronboarding.start_designing' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.searchAssist_allows_you_to_validate' | translate}} </div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/resultranking')">{{'useronboarding.test' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/SearchAssist/optimize-results/results-ranking/" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
             <div class="card-body">
                 <div class="guide-inner-info">{{'useronboarding.searchAssist_Allows_you_to_fine_tune' | translate}}</div>
                 <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/resultranking')">{{'useronboarding.optimize' | translate}}</button>
-                <button class="kr-sg-button-secondary btn_lg ml-1">{{'useronboarding.learn_more' | translate}}</button>
+                <button class="kr-sg-button-secondary btn_lg ml-1"><a href="https://docs.kore.ai/SearchAssist/optimize-results/results-ranking/#Customize_Mode" target="_blank">{{'useronboarding.learn_more' | translate}}</a></button>
             </div>
           </div>
         </div>
