--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -21,7 +21,7 @@
                         <span routerLink="/botActions" class="d-none"></span>
                         <span routerLink="/structuredData" class="d-none"></span>
                     </div>
-                    <div class="headerMenuTab" id="sourceTab" [ngClass]="{'active' : mainMenu == '/index'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/index')">
+                    <div class="headerMenuTab" id="sourceTab" [ngClass]="{'active' : mainMenu == '/index'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/FieldManagementComponent')">
                         <span>Indices</span>
                         <span routerLink="/searchInterface" class="d-none"></span>
                         <span routerLink="/search-experience" class="d-none"></span>
