--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -223,7 +223,7 @@
             </label>
         </div>
     </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body">
+    <perfect-scrollbar class="perfect-scroll-modal-body" #perfectScroll>
         <div class="modal-body textAlignLeft" *ngIf="addEditFacetObj">
             <div class="search_block">
                 <div class="label-text">{{'facets.field_name'| translate}}</div>
