--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -191,7 +191,7 @@
         <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
     </div>
     <ng-container *ngIf="newFieldObj">
-    <!-- <perfect-scrollbar class="perfect-scroll-modal-body"> -->
+    <perfect-scrollbar class="perfect-scroll-modal-body" #perfectScroll>
     <div class="modal-body textAlignLeft">
         <div class="top_sec" >
             <div class="row m-0 mb-20">
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-    <!-- </perfect-scrollbar>  -->
+    </perfect-scrollbar> 
     <div class="modal-footer text-left">
         <button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="addField()">{{newFieldObj._id?('fields.save' | translate):('fields.add' | translate)}}</button> <!-- [disabled]="!(newFieldObj.fieldName) || !(newFieldObj.fieldDataType)" -->
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">{{'fields.cancel' | translate}}</button>
