--- a/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.html
+++ b/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.html
@@ -2,6 +2,7 @@
     <div class="modal_content">
       <div class="modal-header">{{'structuredData.structuredDataImport' | translate}} <img src="assets/images/close.svg"
           (click)="closeModal()"></div>
+          <perfect-scrollbar #perfectScroll>
       <div class="modal-body">
         <div class="success-check pb-4" [ngClass]="{'in-progress' : (docStatusObject.status==='IN_PROGRESS')}" *ngIf="(docStatusObject.status==='SUCCESS' || docStatusObject.status==='IN_PROGRESS')">
           <img src="assets/icons/successCheck.svg">
@@ -50,6 +51,7 @@
           <div class="relaxNote">{{docStatusObject.store.statusMessage}}</div>
         </div>
       </div>
+    </perfect-scrollbar>
       <div class="modal-footer text-right">
         <!-- <button type="button" (click)="abortDoc()" class="kr-sg-button-secondary btn_lg float-none ml-2 mr-0" [ngClass]="{'d-none': ((docStatusObject.status==='SUCCESS') || (docStatusObject.status === 'FAILURE'))}" data-dismiss="modal">{{'structuredData.abort' | translate}}</button> -->
         <button type="button" class="kr-sg-button-primary btn_lg float-none ml-2 mr-0" data-dismiss="modal" [disabled]="(docStatusObject.status==='IN_PROGRESS' && !(docStatusObject.validation))"
