FLY-2585 issue fixed

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -572,7 +572,7 @@
                   <!-- Block-->
                 </div>
                 <!-- Cookies -->
-                <div class="row m-0">
+                <div class="row col-12 p-0 m-0">
                 <div class="group-checkbox">
                   <!-- <div class="pl-0 kr-sg-checkbox">
                       <input id="checkbox_grpg" class="checkbox-custom" type="checkbox" name = "blockHttpsMsgs" [(ngModel)] = "blockHttpsMsgs" [ngModelOptions]="{standalone: true}">
@@ -599,7 +599,7 @@
               <!-- Cookies -->
               </div>
 
-              <div class="inner-content row m-0">
+              <div class="inner-content row col-12 p-0 m-0">
                 <div class="col-3 p-0">
                   <div class="kr-sg-input-text mb-4">
                     <div class="label-text">Crawl Depth
