--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -440,6 +440,7 @@
       padding: 0 18px;
       justify-content: space-between;
       margin-bottom: 22px;
+      line-height: 34px;
       .title {
         color: #26344a;
         font-style: normal;
@@ -450,6 +451,11 @@
         text-transform: uppercase;
       }
       .close_icon {
+        img.search-icon {
+          width: 30px;
+          height: 30px;
+          cursor: pointer;
+        }
         img {
           width: 12px;
           height: 12px;
@@ -471,6 +477,49 @@
       font-size: 10px;
       line-height: 20px;
       height: calc(100% - 160px);
+    }
+
+    .duration-sec {
+      padding-left: 5px;
+      .kr-sg-input-text {
+        position: relative;
+        display: inline-block;
+        width: auto;
+        input {
+          background: #ffffff;
+          border: 1px solid #bdc1c6;
+          box-sizing: border-box;
+          border-radius: 4px;
+          width: 140px;
+          padding: 0 27px;
+        }
+         /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+
+        /* Firefox */
+        input[type=number] {
+          -moz-appearance: textfield;
+        }
+        .minus {
+          position: absolute;
+          left: 9px;
+          bottom: 0px;
+          cursor: pointer;
+          padding: 17px 8px;
+          margin-left: -9px;
+        }
+        .plus {
+          position: absolute;
+          right: 9px;
+          cursor: pointer;
+          padding: 11px 8px;
+          margin-right: -9px;
+        }
+      }
     }
   }
 }
@@ -768,7 +817,54 @@
   text-overflow: ellipsis;
   max-width: 100%;
 }
-
+.kr-sg-input-search{
+  display: inline-block;
+  width: 323px;
+  height: 20px;
+  position: relative;
+  bottom: 6px;
+  right: 10px;               
+  &.active{
+      display: block;
+      width: 300px;
+  }
+  .close-icon{
+      position: absolute;
+      right: 11px;
+      top: 12px;
+      cursor: pointer;
+  }
+  .input-search{
+      border: 1px solid #E4E5E7;                            
+      border-radius: 4px;
+      padding-left: 36px;
+      padding-right: 15px;
+      font-size: 14px;
+      &:focus{
+          border: 1px solid #1372ff;
+      }
+      &::placeholder{
+          color: #BDC1C6;
+      }
+  }
+  .search-icon{
+      left: 12px;
+      top: 10px;
+      position: absolute;
+  }
+} 
+.seach-block{
+  color: #202124;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  // line-height: 14px;
+  margin-right: 30px;
+  img{
+      margin-right: 7px;
+      cursor: pointer;
+  }
+}
 .kr-sg-input-text.input-box.show,.kr-sg-input-text.input-box .position-relative.show {
   .dropdown-menu{
     display: block !important;
